--- a/css/style.css
+++ b/css/style.css
@@ -227,3 +227,94 @@ section{
     font-size: 2rem;
     margin-bottom: 1rem;
  }
+
+ #menu-btn{
+    display: none;
+ }
+ 
+ .home-bg{
+    background:url(../images/home-bg.png) no-repeat;
+    background-size: cover;
+    background-position: center;
+ }
+ 
+ .home-bg .home .slide{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap:1.5rem;
+    padding-bottom: 6rem;
+    padding-top: 2rem;
+    user-select: none;
+ }
+ 
+ .home-bg .home .slide .image{
+    flex:1 1 40rem;
+ }
+ 
+ .home-bg .home .slide .image img{
+    height: 40rem;
+    width: 100%;
+    object-fit: contain;
+ }
+ 
+ .home-bg .home .slide .content{
+    flex:1 1 40rem;
+ }
+ 
+ .home-bg .home .slide .content span{
+    font-size: 2rem;
+    color:var(--white);
+ }
+ 
+ .home-bg .home .slide .content h3{
+    margin-top: 1rem;
+    font-size: 4rem;
+    color:var(--white);
+    text-transform: uppercase;
+ }
+ 
+ .home-bg .home .slide .content .btn{
+    display: inline-block;
+    width: auto;
+ }
+ 
+ .swiper-pagination-bullet-active{
+    background-color: var(--main-color);
+ }
+ 
+ .category .slide{
+    margin-bottom: 5rem;
+    box-shadow: var(--box-shadow);
+    border:var(--border);
+    text-align: center;
+    padding:2rem;
+    background: var(--white);
+    border-radius: .5rem;
+ }
+ 
+ .category .slide:hover{
+    background-color: var(--black);
+ }
+ 
+ .category .slide:hover img{
+    filter:invert();
+ }
+ 
+ .category .slide:hover h3{
+    color:var(--white);
+ }
+ 
+ .category .slide img{
+    height: 7rem;
+    width: 100%;
+    object-fit: contain;
+    margin-bottom: 1rem;
+    user-select: none;
+ }
+ 
+ .category .slide h3{
+    font-size: 2rem;
+    color:var(--black);
+    user-select: none;
+ }
