--- a/css/style.css
+++ b/css/style.css
@@ -619,119 +619,118 @@ section{
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+ .about .row{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap:1.5rem;
+ }
+ 
+ .about .row .image{
+    flex:1 1 40rem;
+ }
+ 
+ .about .row .image img{
+    width: 100%;
+ }
+ 
+ .about .row .content{
+    flex:1 1 40rem;
+ }
+ 
+ .about .row .content h3{
+    font-size: 3rem;
+    color:var(--black);
+ }
+ 
+ .about .row .content p{
+    line-height: 2;
+    font-size: 1.5rem;
+    color:var(--light-color);
+    padding:1rem 0;
+ }
+ 
+ .about .row .content .btn{
+    display: inline-block;
+    width: auto;
+ }
+ 
+ .reviews .slide{
+    padding:2rem;
+    text-align: center;
+    background-color: var(--white);
+    box-shadow: var(--box-shadow);
+    border-radius: .5rem;
+    border:var(--border);
+    margin-bottom: 5rem;
+    user-select: none;
+ }
+ 
+ .reviews .slide img{
+    height: 10rem;
+    width: 10rem;
+    border-radius: 50%;
+    margin-bottom: .5rem;
+ }
+ 
+ .reviews .slide p{
+    padding:1rem 0;
+    line-height: 2;
+    font-size: 1.5rem;
+    color:var(--light-color);
+ }
+ 
+ .reviews .slide .stars{
+    display: inline-block;
+    margin-bottom: 1rem;
+    background-color: var(--light-bg);
+    padding:1rem 1.5rem;
+    border-radius: .5rem;
+ }
+ 
+ .reviews .slide .stars i{
+    margin:0 .3rem;
+    font-size: 1.7rem;
+    color:var(--orange);
+ }
+ 
+ .reviews .slide h3{
+    font-size: 2rem;
+    color:var(--black);
+ }
+ 
+ .contact form{
+    padding:2rem;
+    text-align: center;
+    background-color: var(--white);
+    box-shadow: var(--box-shadow);
+    border-radius: .5rem;
+    border:var(--border);
+    max-width: 50rem;
+    margin:0 auto;
+ }
+ 
+ .contact form h3{
+    margin-bottom: 1rem;
+    text-transform: capitalize;
+    font-size: 2.5rem;
+    color:var(--black);
+ }
+ 
+ .contact form .box{
+    margin:1rem 0;
+    width: 100%;
+    background-color: var(--light-bg);
+    padding:1.4rem;
+    font-size: 1.8rem;
+    color:var(--black);
+    border-radius: .5rem;
+ }
+ 
+ .contact form textarea{
+    height: 15rem;
+    resize: none;
+ }
 
 
 
