--- a/css/style.css
+++ b/css/style.css
@@ -940,7 +940,7 @@ section{
  .footer{
   
    background-color: var(--white);
-   background :url("../images/frontpage.png") no-repeat;
+   background :url("../images/Black\ and\ Blue\ Illustration\ Lighthouse\ Desktop\ Wallpaper.png") no-repeat;
    /* padding-bottom: 7rem; */
 }
 
