--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ section{
  }
  
  .home-bg{
-    background:url(../images/frontpage.png) no-repeat;
+    background:url(../images/background.png) no-repeat;
     background-size: cover;
     background-position: center;
  }
